kubernetes/pihole/components/vlan3/statefulset.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: pihole-vlan3
  namespace: pihole
  labels:
    app: pihole-vlan3
    app.kubernetes.io/instance: pihole
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
spec:
  replicas: 1
  serviceName: pihole
  selector:
    matchLabels:
      app: pihole-vlan3
  template:
    metadata:
      labels:
        app: pihole-vlan3
      annotations:
        enable.version-checker.io/pihole: "true"
        k8s.v1.cni.cncf.io/networks: |
          [{
            "name": "br1-vlan3",
            "namespace": "default",
            "mac": "10:01:01:00:30:05",
            "ips": ["10.101.3.5/24"]
          }]
    spec:
      hostname: pihole-vlan3
      securityContext:
        seccompProfile:
          type: RuntimeDefault
        runAsNonRoot: true
      dnsConfig:
        nameservers:
          - 1.1.1.1
          - 1.0.0.1
      containers:
        - image: docker.io/pihole/pihole:2024.07.0@sha256:0def896a596e8d45780b6359dbf82fc8c75ef05b97e095452e67a0a4ccc95377
          imagePullPolicy: IfNotPresent
          name: pihole-okd-vlan3
          securityContext:
            runAsNonRoot: false
            privileged: true
            allowPrivilegeEscalation: true
            readOnlyRootFilesystem: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
            # readinessProbe:
            #   exec:
            #     command: ["dig", "@127.0.0.1", "cloudflare.com"]
            # initialDelaySeconds: 15
            # timeoutSeconds: 20
            # periodSeconds: 30
            # successThreshold: 1
            # failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: dns-tcp
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 5
          ports:
            - name: dns-tcp
              containerPort: 53
              protocol: TCP
            - name: dns-udp
              containerPort: 53
              protocol: UDP
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: etc-pihole
              mountPath: /etc/pihole
            - name: etc-dnsmasq
              mountPath: /etc/dnsmasq.d
            # - name: wildcard-dns
            #   mountPath: "/etc/dnsmasq.d/02-my-wildcard-dns.conf"
            #   subPath: "02-my-wildcard-dns.conf"
            - name: wildcard-dns
              mountPath: "/etc/dnsmasq.d/02-custom-settings.conf"
              subPath: "02-custom-settings.conf"
            - name: wildcard-dns
              mountPath: "/etc/dnsmasq.d/99-my-settings-vlan3.conf"
              subPath: "99-my-settings-vlan3.conf"
            - mountPath: /dev/shm
              name: dshm
          resources:
            limits:
              cpu: 250m
              memory: 1Gi
            requests:
              cpu: 25m
              memory: 512Mi
      automountServiceAccountToken: false
      serviceAccountName: pihole
      volumes:
        - name: etc-pihole
          persistentVolumeClaim:
            claimName: vlan3-etc-pihole
        - name: etc-dnsmasq
          persistentVolumeClaim:
            claimName: vlan3-etc-dnsmasq
        - name: wildcard-dns
          configMap:
            name: wildcard-dns
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
