kubernetes/pihole/components/vlan3/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-okd-vlan3
  namespace: pihole
  labels:
    app: pihole-vlan3
    app.kubernetes.io/instance: pihole
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
    - name: metrics
      port: 9617
      protocol: TCP
      targetPort: 9617
  selector:
    app: pihole-vlan3
